Added a navbar and other .html for some testing

--- a/index.html
+++ b/index.html
@@ -1,11 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pope´s Website</title>
-</head>
-<body>
-    <h1>This is El Pope</h1>
-</body>
+    <link rel="stylesheet" href="./styles.css" />
+    <!--To insert an img on the title-->
+    <link rel="shortcut icon" type="x-icon" href="" />
+    <script src="" defer></script>
+  </head>
+
+  <body>
+
+
+
+
+
+
+    
+    <div id="home" class="hero">
+      <div class="navbar">
+        <h1><span>Vichi</span>Web</h1>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+        </ul>
+
+        <div class="navbar-icons">
+          <a href="./Flowers/flower.html"
+            ><img
+              id="globo"
+              src="./img/balloon-heart.svg"
+              alt=""
+              title="sorpresa <3"
+          /></a>
+          <a href="./Juegos/juegos.html"
+            ><img id="juegos" src="./img/joystick.svg" alt="" title="juegos <3"
+          /></a>
+          <!-- <a href="./Calendar/cal.html"> <img id="calendario" src="./img/calendar-heart-fill.svg" alt="" title="tu horario <3"></a> -->
+          <a href="./Arte generativo/index.html">
+            <img id="arte" src="./img/brush.svg" alt="" title="arte <3"
+          /></a>
+          <a href="./wordle/index.html">
+            <img id="arte" src="./img/file-word.svg" alt="" title="wordle <3"
+          /></a>
+          <a href="./generator/index.html">
+            <img
+              id="arte"
+              src="./img/card-image.svg"
+              alt=""
+              title="imagenes random <3"
+          /></a>
+        </div>
+      </div>
+
+
+      <div class="banner">
+        <div class="left-column">
+          <h1><span>Vichita</span></h1>
+          <h3>The <span>prettiest</span> girl <3</h3>
+          <p>
+            Vi, o mejor conocida como Vichi, es una niña increíble, inteligente,
+            chistosa, agradable y hermosa. Ella me hace feliz todos los días
+            desde que llegó a mi vida, esta página fue hecha para enseñarle
+            cuanto la amo y porque cumplimos 9 meses siendo la pareja mas bonita
+            del mundo. Gracias amor, te amo <3 <br />
+            Actualizado para aniversario!!
+          </p>
+
+          <div class="btn">
+            <a href="https://littlealchemy2.com/"
+              ><button type="button" class="primary-btn">Jueguito</button></a
+            >
+            <a href="./Video/index.html"
+              ><button type="button">Video para ti</button></a
+            >
+          </div>
+          <div class="social-icons">
+            <a href="https://twitter.com/justviol"
+              ><img src="./img/twitter.png" alt="" title="te lleva a twitter"
+            /></a>
+            <a href="https://www.instagram.com/viol.yanez/"
+              ><img
+                src="./img/instagram.png"
+                alt=""
+                title="te lleva a instagram"
+            /></a>
+            <a href="https://www.pinterest.com/justviol/"
+              ><img
+                src="./img/pinterest.png"
+                alt=""
+                title="te lleva a pinterest"
+            /></a>
+            <a href="https://www.tiktok.com/@justviol?lang=es "
+              ><img src="./img/tiktok.svg" alt="" title="te lleva a tik tok"
+            /></a>
+          </div>
+        </div>
+
+        <div class="right-column">
+          <img
+            height=""
+            src="img/WhatsApp Image 2023-10-01 at 19.35.20.jpeg"
+            alt=""
+            title="mi novia siendo la mas bella"
+          />
+        </div>
+      </div>
+
+      <hr id="segundoh" />
+
+      <!--about section-->
+      <section id="about">
+        <p id="cursive" class="section__text__p1">Porque te amo mucho</p>
+        <h1 class="title">About <span>This</span></h1>
+        <div class="section-container">
+          <div class="section__pic-container">
+            <img
+              src="./img/WhatsApp Image 2023-10-02 at 08.48.21.jpeg"
+              alt="Profile picture"
+              class="about-pic"
+              title="yo con el amor de mi vida"
+            />
+          </div>
+
+          <div class="text-container">
+            <p id="textop">
+              Holi amor! espero te esté gustando esta que es tu página, te la
+              hizo tu novio con mucho esfuerzo y dedicación y lo mereces. Quiero
+              que veas que me estoy esforzando mucho por esto de la programación
+              y qué mejor que dedicándote esta página, que hasta ahora, ha sido
+              la más producida solamente hecha para ti, disfrutala mucho.
+              <br />
+              <span class="fechas">3 de octubre del 2023</span>
+            </p>
+            <p id="textopdos">
+              Vichi! ¿Cómo estás amor? espero te encuentres súper bien,
+              oficialmente la VichiWeb cumple 92 días! y para festejar nuestro
+              año siendo la mejor pareja del mundo, te la preparé con mucho
+              cariño y nuevas actualizaciones que espero te gusten mucho mucho.
+              Te amo mi amor, gracias por siempre inspirarme a seguir haciendo
+              lo que me gusta y por darme una razón para hacerlo <3.<br />
+              <span class="fecha2">3 de enero del 2024</span>
+            </p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#experience">About</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Enrique Milo. Amo a mi novia.</p>
+    </footer>
+
+    <div class="burbujas">
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+      <div class="burbuja"></div>
+    </div>
+  </body>
 </html>
