--- a/prueba.html
+++ b/prueba.html
@@ -1,13 +1,7 @@
 <!--To dos
-Add a carousel with images of family
-Add a carousel with images of cars
-Add https://www.youtube.com/watch?v=gGuDNQbRQcg&ab_channel=CodingArtist
-"Video para ti" will be a coupon he can exchange for any song played by me in the drums recorded and
-published there:
-Make Video para ti pop up an image of the coupon 
-
-
--->
+  Add a carousel with images of cars
+  Add https://www.youtube.com/watch?v=gGuDNQbRQcg&ab_channel=CodingArtist
+  -->
 
 <!DOCTYPE html>
 <!-- Coding By CodingNepal - codingnepalweb.com -->
@@ -38,18 +32,21 @@ Make Video para ti pop up an image of the coupon
       <ul class="nav-links">
         <i class="uil uil-times navCloseBtn"></i>
         <li><a href="#">Home</a></li>
-        <li><a href="#">-</a></li>
-        <li><a href="#">-</a></li>
-        <li><a href="#">-</a></li>
-        <li><a href="#">-</a></li>
+        <li><a href="#primerhr">Images</a></li>
+        <li><a href="#letter">Letter</a></li>
       </ul>
 
       <i class="uil uil-search search-icon" id="searchIcon"></i>
       <div class="search-box">
         <i class="uil uil-search search-icon"></i>
-        <input type="text" placeholder="Aún aprendiendo a hacer esto, disculpe las molestias" />
+        <input
+          type="text"
+          placeholder="Aún aprendiendo a hacer esto, disculpe las molestias"
+        />
       </div>
     </nav>
+
+    <!--Mio-->
 
     <div class="banner">
       <div class="left-column">
@@ -64,12 +61,29 @@ Make Video para ti pop up an image of the coupon
         </p>
 
         <div class="btn">
-          <button id="btnMostrarImagen" class="hvr-shutter-out-horizontal">Mostrar Imagen</button
-          <a href="./Video/index.html"> <button class="hvr-shutter-out-horizontal" type="button">Video para ti</button></a
+          <button id="btnMostrarImagen" class="hvr-shutter-out-horizontal">
+            Mostrar Imagen
+          </button>
+          <a
+            href="https://www.youtube.com/watch?v=gGdGFtwCNBE&ab_channel=TheKillersVEVO"
+            target="_blank"
+          >
+            <button
+              id="btnMostrarImagen2"
+              class="hvr-shutter-out-horizontal"
+              type="button"
+            >
+              Video
+            </button></a
           >
         </div>
+
         <div id="overlay" class="overlay" onclick="cerrarImagen()">
-          <img src="./assets/5LSDCYUUEBD2LFAYRXU2ICOIIA.avif" alt="Imagen a Mostrar" id="imagenMostrada">
+          <img
+            src="./assets/5LSDCYUUEBD2LFAYRXU2ICOIIA.avif"
+            alt="Imagen a Mostrar"
+            id="imagenMostrada"
+          />
         </div>
       </div>
 
@@ -83,5 +97,76 @@ Make Video para ti pop up an image of the coupon
         />
       </div>
     </div>
+
+    <hr id="primerhr" />
+
+    <!--first carousel-->
+    <div id="images" class="slideshow-container">
+      <!-- Full-width images with number and caption text -->
+      <div class="mySlides fade">
+        <div class="numbertext">1 / 3</div>
+        <img
+          id="firstcarimage"
+          src="./assets/IMG_1475.jpeg"
+          style="width: 100%"
+        />
+        <div class="text">Espada en la piedra con coquito</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">2 / 3</div>
+        <img src="./assets/IMG_1484.jpeg" style="width: 100%" />
+        <div class="text">Disney</div>
+      </div>
+
+      <div class="mySlides fade">
+        <div class="numbertext">3 / 3</div>
+        <img src="./assets/IMG_8752.JPEG" style="width: 100%" />
+        <div class="text">Pope en el mustang</div>
+      </div>
+
+      <!-- Next and previous buttons -->
+      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+      <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br />
+
+    <!-- The dots/circles -->
+    <div style="text-align: center">
+      <span class="dot" onclick="currentSlide(1)"></span>
+      <span class="dot" onclick="currentSlide(2)"></span>
+      <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+    <br />
+    <br />
+    <hr id="segundohr" />
+
+    <section id="letter" class="birthday-section">
+      <div class="card">
+        <div class="outside">
+          <div class="front">
+            <p>Happy Birthday</p>
+            <div class="cake">
+              <div class="top-layer"></div>
+              <div class="middle-layer"></div>
+              <div class="bottom-layer"></div>
+              <div class="candle"></div>
+            </div>
+          </div>
+          <div class="back"></div>
+        </div>
+        <div class="inside">
+          <p>Feliz cumpleaños pope, te agradezco por todo lo que me has dado, todas las enseñanzas, los consejos, espero pases un día muy bonito y te den muchos libros. Soy feliz siendo tu hijo.</p>
+          <h1>&#127873;</h1>
+        </div>
+      </div>
+    </section>
+    <br>
+    <br>
+
+     <footer>
+        <p>2024 Enrique Milo</p>
+      </footer>
   </body>
 </html>
