--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!--To dos
-  Add a carousel with images of cars
-  Add https://www.youtube.com/watch?v=gGuDNQbRQcg&ab_channel=CodingArtist
+  
   -->
 
 <!DOCTYPE html>
@@ -10,7 +9,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navigation Bar with Search Box</title>
+    <title>Pope's Website</title>
     <link rel="stylesheet" href="prueba.css" />
 
     <!-- Unicons CSS -->
